// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinePrinter renders correctly with no segments 1`] = `
<DocumentFragment>
  <div
    class="sc-dOfePm gUsSlc"
    id="line0"
  >
    <span />
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with one segment where there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-dOfePm gUsSlc"
    id="line0"
  >
    <span />
    <span
      class="sc-gnOvAp bYEiAR"
      id="line0-segment0"
    >
      <span
        class="sc-glJfXD hHREYb"
      />
      <div
        class="sc-VHjGu hmIWSt"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segment where there are additional lines to follow 1`] = `
<DocumentFragment>
  <div
    class="sc-dOfePm gUsSlc"
    id="line0"
  >
    <span />
    <span
      class="sc-gnOvAp bYEiAR"
      id="line0-segment0"
    >
      <span
        class="sc-glJfXD hHREYb"
      />
      <div
        class="sc-VHjGu hmIWSt"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segments but there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-dOfePm gUsSlc"
    id="line0"
  >
    <span />
    <span
      class="sc-gnOvAp bYEiAR"
      id="line0-segment0"
    >
      <span
        class="sc-glJfXD hHREYb"
      />
      <div
        class="sc-VHjGu hmIWSt"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;
